force-app/main/default/objects/FulfillmentOrder/fields/CancelledDate__c.field-meta.xml
<CustomField>
    <fullName>CancelledDate__c</fullName>
    <description>This field is used to capture the RefundDate of the fulfillment Order.</description>
    <label>CancelledDate</label>
    <type>DateTime</type>
</CustomField>