force-app/main/default/objects/FulfillmentOrder/fields/Capture_Payment__c.field-meta.xml
<CustomField>
    <fullName>Capture_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Capture Payment</label>
    <type>Checkbox</type>
</CustomField>