force-app/main/default/objects/FulfillmentOrder/fields/COS_DB_Success__c.field-meta.xml
<CustomField>
    <fullName>COS_DB_Success__c</fullName>
    <defaultValue>false</defaultValue>
    <label>COS DB Success</label>
    <type>Checkbox</type>
</CustomField>