force-app/main/default/objects/FulfillmentOrder/fields/Days_past_Confirm__c.field-meta.xml
<CustomField>
    <fullName>Days_past_Confirm__c</fullName>
    <formula>TODAY() -  DATEVALUE(OrderSummary.OrderedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days past Confirm</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>