force-app/main/default/objects/FulfillmentOrder/fields/Days_to_expire__c.field-meta.xml
<CustomField>
    <fullName>Days_to_expire__c</fullName>
    <formula>IF(AND(RecordType.DeveloperName = &apos;InPerson&apos;,
  ISPICKVAL(Status, &apos;PWN Approved&apos;)
  ), 
   PWN_Status_Date__c +65 - TODAY(),9999
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days to expire</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>