force-app/main/default/objects/FulfillmentOrder/fields/Document_Date__c.field-meta.xml
<CustomField>
    <fullName>Document_Date__c</fullName>
    <formula>IF(PWN_Status_Date__c!=null , PWN_Status_Date__c, DATEVALUE(LastModifiedDate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Document Date for Ava Tax</inlineHelpText>
    <label>Document Date</label>
    <type>Date</type>
</CustomField>