force-app/main/default/objects/FulfillmentOrder/fields/Eligible_to_Expire__c.field-meta.xml
<CustomField>
    <fullName>Eligible_to_Expire__c</fullName>
    <formula>IF(RecordType.DeveloperName = &apos;InPerson&apos;,

AND(  
ISPICKVAL(Status, &apos;Pending Approval&apos;),
TODAY()&gt; DATEVALUE(CreatedDate)+ 65
),
No_Of_Expired_Items__c = ItemCount
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Eligible to Expire?</label>
    <type>Checkbox</type>
</CustomField>