force-app/main/default/objects/FulfillmentOrder/fields/Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date__c</fullName>
    <formula>IF(ISBLANK(PWN_Status_Date__c), DATEVALUE( CreatedDate )  +65,PWN_Status_Date__c+65)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>