force-app/main/default/objects/FulfillmentOrder/fields/FO_Id_18_digit_searchable__c.field-meta.xml
<CustomField>
    <fullName>FO_Id_18_digit_searchable__c</fullName>
    <description>Populated by a Flow upon FO record creation. Allows FO Id to be a searchable field.</description>
    <label>FO Id (18 digit; searchable)</label>
    <length>18</length>
    <type>Text</type>
</CustomField>