force-app/main/default/objects/FulfillmentOrder/fields/Fulfilled_From_Location__c.field-meta.xml
<CustomField>
    <fullName>Fulfilled_From_Location__c</fullName>
    <formula>FulfilledFromLocation.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fulfilled From Location</label>
    <type>Text</type>
</CustomField>