force-app/main/default/objects/FulfillmentOrder/fields/FulfilledToAddressLine1__c.field-meta.xml
<CustomField>
    <fullName>FulfilledToAddressLine1__c</fullName>
    <label>FulfilledToAddressLine1</label>
    <length>80</length>
    <type>Text</type>
</CustomField>