force-app/main/default/objects/FulfillmentOrder/fields/FulfilledToAddressLine2__c.field-meta.xml
<CustomField>
    <fullName>FulfilledToAddressLine2__c</fullName>
    <label>FulfilledToAddressLine2</label>
    <length>80</length>
    <type>Text</type>
</CustomField>