force-app/main/default/objects/FulfillmentOrder/fields/Fulfillment_Order_Id__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment_Order_Id__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fulfillment Order Id (18 Digit)</label>
    <type>Text</type>
</CustomField>