force-app/main/default/objects/FulfillmentOrder/fields/Fulfillment_Order_ID_Uppercase__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment_Order_ID_Uppercase__c</fullName>
    <formula>UPPER(CASESAFEID(Id))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fulfillment Order ID - Uppercase</label>
    <type>Text</type>
</CustomField>