force-app/main/default/objects/FulfillmentOrder/fields/Gift_Card__c.field-meta.xml
<CustomField>
    <fullName>Gift_Card__c</fullName>
    <label>Gift Card</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>