force-app/main/default/objects/FulfillmentOrder/fields/HUB_Success__c.field-meta.xml
<CustomField>
    <fullName>HUB_Success__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HUB Success</label>
    <type>Checkbox</type>
</CustomField>