force-app/main/default/objects/FulfillmentOrder/fields/Is_Mobile_Phlebotomy__c.field-meta.xml
<CustomField>
    <fullName>Is_Mobile_Phlebotomy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is_Mobile_Phlebotomy</label>
    <type>Checkbox</type>
</CustomField>