force-app/main/default/objects/FulfillmentOrder/fields/Is_Packhealth__c.field-meta.xml
<CustomField>
    <fullName>Is_Packhealth__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checks to true if fulfillment order line is packhealth test type</description>
    <label>Is Packhealth</label>
    <type>Checkbox</type>
</CustomField>