force-app/main/default/objects/FulfillmentOrder/fields/Is_Payment_Settled__c.field-meta.xml
<CustomField>
    <fullName>Is_Payment_Settled__c</fullName>
    <formula>ISPICKVAL(StatusCategory, &apos;Closed&apos;)
||
ISPICKVAL(StatusCategory, &apos;Canceled&apos;)
||
ISPICKVAL(StatusCategory, &apos;Rejected&apos;)
||
(!ISBLANK(InvoiceId)&amp;&amp;Invoice.Balance =0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Payment Settled?</label>
    <type>Checkbox</type>
</CustomField>