force-app/main/default/objects/FulfillmentOrder/fields/Is_Self_Cancelled__c.field-meta.xml
<CustomField>
    <fullName>Is_Self_Cancelled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Self Cancelled</label>
    <type>Checkbox</type>
</CustomField>