force-app/main/default/objects/FulfillmentOrder/fields/LabTestDate__c.field-meta.xml
<CustomField>
    <fullName>LabTestDate__c</fullName>
    <label>LabTestDate</label>
    <type>DateTime</type>
</CustomField>