force-app/main/default/objects/FulfillmentOrder/fields/LID__c.field-meta.xml
<CustomField>
    <fullName>LID__c</fullName>
    <formula>&apos;SF000000000000&apos;+CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LID</label>
    <type>Text</type>
</CustomField>