force-app/main/default/objects/FulfillmentOrder/fields/Migrate_to_Lab_Order__c.field-meta.xml
<CustomField>
    <fullName>Migrate_to_Lab_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Migrate to Lab Order</label>
    <type>Checkbox</type>
</CustomField>