force-app/main/default/objects/FulfillmentOrder/fields/No_Of_Expired_Items__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Expired_Items__c</fullName>
    <label>No Of Expired Items</label>
    <summaryFilterItems>
        <field>FulfillmentOrderLineItem.Status__c</field>
        <operation>equals</operation>
        <value>Expired</value>
    </summaryFilterItems>
    <summaryForeignKey>FulfillmentOrderLineItem.FulfillmentOrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>