force-app/main/default/objects/FulfillmentOrder/fields/OrderExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>OrderExpirationDate__c</fullName>
    <formula>DATETIMEVALUE( PWN_Status_Date__c  + 65)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OrderExpirationDate</label>
    <type>DateTime</type>
</CustomField>