force-app/main/default/objects/FulfillmentOrder/fields/Physician_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Physician_First_Name__c</fullName>
    <label>Physician First Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>