force-app/main/default/objects/FulfillmentOrder/fields/Physician_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Physician_Last_Name__c</fullName>
    <label>Physician Last Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>