force-app/main/default/objects/FulfillmentOrder/fields/PWN_ID__c.field-meta.xml
<CustomField>
    <fullName>PWN_ID__c</fullName>
    <label>PA ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>