force-app/main/default/objects/FulfillmentOrder/fields/PWN_Status_Date__c.field-meta.xml
<CustomField>
    <fullName>PWN_Status_Date__c</fullName>
    <label>PA Status Date</label>
    <type>Date</type>
</CustomField>