force-app/main/default/objects/FulfillmentOrder/fields/PWN_Success__c.field-meta.xml
<CustomField>
    <fullName>PWN_Success__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PA Success</label>
    <type>Checkbox</type>
</CustomField>