force-app/main/default/objects/FulfillmentOrder/fields/Reason_Physician_Notes__c.field-meta.xml
<CustomField>
    <fullName>Reason_Physician_Notes__c</fullName>
    <label>Reason Physician Notes</label>
    <type>TextArea</type>
</CustomField>