force-app/main/default/objects/FulfillmentOrder/fields/RefundTotal__c.field-meta.xml
<CustomField>
    <fullName>RefundTotal__c</fullName>
    <formula>OrderSummary.RefundTotal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Refund Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>