force-app/main/default/objects/FulfillmentOrder/fields/ResultDate__c.field-meta.xml
<CustomField>
    <fullName>ResultDate__c</fullName>
    <label>ResultDate</label>
    <type>DateTime</type>
</CustomField>