force-app/main/default/objects/FulfillmentOrder/fields/Retry_Event__c.field-meta.xml
<CustomField>
    <fullName>Retry_Event__c</fullName>
    <formula>DATEVALUE(CreatedDate) &lt; DATE(2023,10,29) &amp;&amp;  !Sent_To_Labs__c &amp;&amp;
 ISPICKVAL( Status , &apos;Pending Approval&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Retry Event?</label>
    <type>Checkbox</type>
</CustomField>