force-app/main/default/objects/FulfillmentOrder/fields/Send_Cancel_Event__c.field-meta.xml
<CustomField>
    <fullName>Send_Cancel_Event__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Cancel Event?</label>
    <type>Checkbox</type>
</CustomField>