force-app/main/default/objects/FulfillmentOrder/fields/Sent_To_Lab_Date__c.field-meta.xml
<CustomField>
    <fullName>Sent_To_Lab_Date__c</fullName>
    <label>Sent To Lab Date</label>
    <type>Date</type>
</CustomField>