force-app/main/default/objects/FulfillmentOrder/fields/Sent_To_Labs__c.field-meta.xml
<CustomField>
    <fullName>Sent_To_Labs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sent To Labs?</label>
    <type>Checkbox</type>
</CustomField>