force-app/main/default/objects/FulfillmentOrder/fields/ServiceFee__c.field-meta.xml
<CustomField>
    <fullName>ServiceFee__c</fullName>
    <description>CASE( Status , 
      &apos;Cancelled&apos;,  IF( Full_Refund__c , 0.00,Service_Fee__c) , 
      &apos;PWN Rejected&apos;, IF(InvoiceId!=null  , 20.00,0),
      &apos;Expired&apos;, IF(InvoiceId!=null  , 20.00,0),
      0)</description>
    <formula>IF(OR( TEXT(StatusCategory) =&apos;Canceled&apos;,TEXT(StatusCategory) =&apos;Rejected&apos;), 
     IF( AND(Full_Refund__c, NOT ( Is_Self_Cancelled__c )) , 0.00,Service_Fee__c) 
,
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>