force-app/main/default/objects/FulfillmentOrder/fields/Shipment_Success__c.field-meta.xml
<CustomField>
    <fullName>Shipment_Success__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Shipment Success</label>
    <type>Checkbox</type>
</CustomField>