force-app/main/default/objects/FulfillmentOrder/recordTypes/At_home_OTC_Cleared.recordType-meta.xml
<RecordType>
    <fullName>At_home_OTC_Cleared</fullName>
    <active>true</active>
    <label>At-home (OTC Cleared)</label>
</RecordType>