force-app/main/default/objects/FulfillmentOrder/recordTypes/At_home_Self.recordType-meta.xml
<RecordType>
    <fullName>At_home_Self</fullName>
    <active>true</active>
    <label>At-home (OTC Not Cleared)</label>
</RecordType>