force-app/main/default/objects/FulfillmentOrder/recordTypes/GSS.recordType-meta.xml
<RecordType>
    <fullName>GSS</fullName>
    <active>true</active>
    <label>GSS</label>
</RecordType>