force-app/main/default/objects/FulfillmentOrder/recordTypes/InPerson.recordType-meta.xml
<RecordType>
    <fullName>InPerson</fullName>
    <active>true</active>
    <label>In Person</label>
</RecordType>