force-app/main/default/objects/FulfillmentOrder/recordTypes/PackHealth.recordType-meta.xml
<RecordType>
    <fullName>PackHealth</fullName>
    <active>true</active>
    <label>PackHealth</label>
</RecordType>