force-app/main/default/objects/FulfillmentOrder/recordTypes/PWN_Service.recordType-meta.xml
<RecordType>
    <fullName>PWN_Service</fullName>
    <active>true</active>
    <label>PWN Service</label>
</RecordType>