force-app/main/default/objects/FulfillmentOrder/validationRules/Restrict_Cancellation.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Cancellation</fullName>
    <active>true</active>
    <description>Orders cannot be cancelled if the status is In progress or Results ready.</description>
    <errorConditionFormula>AND( 
OR(ISPICKVAL(Status,&apos;Cancelled&apos;),
    ISPICKVAL(Status,&apos;PWN Rejected&apos;)
 ),

 OR(
   ISPICKVAL(PRIORVALUE(Status), &apos;Partial Results Ready&apos;),
   ISPICKVAL(PRIORVALUE(Status), &apos;Results Ready&apos;),
   ISPICKVAL(PRIORVALUE(Status), &apos;In Progress&apos;)
 ),
 TEXT(Cancel_Reason__c)!=&apos;TNP&apos;	
)</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage>The Fulfillment Order cannot be cancelled at this stage.</errorMessage>
</ValidationRule>