force-app/main/default/objects/FulfillmentOrder/listViews/all_fulfillment_orders.listView-meta.xml
<ListView>
    <fullName>all_fulfillment_orders</fullName>
    <columns>Name</columns>
    <columns>Id</columns>
    <columns>OrderSummary</columns>
    <columns>Status</columns>
    <columns>FulfilledToName</columns>
    <columns>FulfilledFromLocation</columns>
    <columns>Record_Type__c</columns>
    <columns>Sent_To_Labs__c</columns>
    <columns>Invoice</columns>
    <columns>CreatedDate</columns>
    <columns>LastModifiedDate</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Self_Cancelled__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Fulfillment Orders</label>
</ListView>