force-app/main/default/objects/FulfillmentOrder/listViews/Cancelled_Expired_PWN_Rejected.listView-meta.xml
<ListView>
    <fullName>Cancelled_Expired_PWN_Rejected</fullName>
    <columns>Name</columns>
    <columns>OrderSummary</columns>
    <columns>Status</columns>
    <columns>FulfilledToName</columns>
    <columns>FulfilledFromLocation</columns>
    <columns>Invoice</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>Expired,PWN Rejected,Cancelled,Rejected</value>
    </filters>
    <label>Cancelled/Expired/PWN Rejected</label>
</ListView>