force-app/main/default/objects/FulfillmentOrder/listViews/Expired.listView-meta.xml
<ListView>
    <fullName>Expired</fullName>
    <columns>Name</columns>
    <columns>Id</columns>
    <columns>OrderSummary</columns>
    <columns>Status</columns>
    <columns>FulfilledToName</columns>
    <columns>FulfilledFromLocation</columns>
    <columns>Invoice</columns>
    <columns>OrderExpirationDate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>Expired</value>
    </filters>
    <label>Expired</label>
</ListView>