force-app/main/default/objects/FulfillmentOrder/listViews/Filter_by_FO_ID.listView-meta.xml
<ListView>
    <fullName>Filter_by_FO_ID</fullName>
    <columns>Name</columns>
    <columns>FulfilledFromLocation</columns>
    <columns>FulfilledToName</columns>
    <columns>Status</columns>
    <columns>OrderSummary</columns>
    <columns>Invoice</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Fulfillment_Order_Id__c</field>
        <operation>equals</operation>
        <value>0a38b000000tuVAAAY</value>
    </filters>
    <label>Filter by FO ID</label>
</ListView>