force-app/main/default/objects/FulfillmentOrder/listViews/In_Progress.listView-meta.xml
<ListView>
    <fullName>In_Progress</fullName>
    <columns>Name</columns>
    <columns>OrderSummary</columns>
    <columns>Status</columns>
    <columns>FulfilledToName</columns>
    <columns>FulfilledFromLocation</columns>
    <columns>Invoice</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>In Progress</value>
    </filters>
    <label>In - Progress</label>
</ListView>