force-app/main/default/objects/FulfillmentOrder/listViews/Pending_Approval.listView-meta.xml
<ListView>
    <fullName>Pending_Approval</fullName>
    <columns>Name</columns>
    <columns>OrderSummary</columns>
    <columns>Status</columns>
    <columns>FulfilledToName</columns>
    <columns>FulfilledFromLocation</columns>
    <columns>Invoice</columns>
    <columns>CreatedDate</columns>
    <columns>PWN_Success__c</columns>
    <columns>PWN_Status_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>Pending Approval</value>
    </filters>
    <label>Pending Approval</label>
</ListView>