force-app/main/default/objects/FulfillmentOrder/listViews/PWN_Approved.listView-meta.xml
<ListView>
    <fullName>PWN_Approved</fullName>
    <columns>Name</columns>
    <columns>OrderSummary</columns>
    <columns>Status</columns>
    <columns>FulfilledToName</columns>
    <columns>FulfilledFromLocation</columns>
    <columns>Invoice</columns>
    <columns>CreatedDate</columns>
    <columns>LastModifiedDate</columns>
    <columns>Record_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>PWN Approved</value>
    </filters>
    <label>PWN Approved</label>
</ListView>