force-app/main/default/objects/FulfillmentOrder/listViews/Results_Ready.listView-meta.xml
<ListView>
    <fullName>Results_Ready</fullName>
    <columns>Name</columns>
    <columns>OrderSummary</columns>
    <columns>Status</columns>
    <columns>FulfilledToName</columns>
    <columns>FulfilledFromLocation</columns>
    <columns>Invoice</columns>
    <columns>LastModifiedDate</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>Results Ready</value>
    </filters>
    <label>Results Ready</label>
</ListView>